overflow issue fixed

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 
@@ -177,4 +179,16 @@ footer.container-fluid {
 footer.container-fluid .container{
     display: flex;
     justify-content: center;
+}
+
+#call-to-action{
+    margin: 50px 0;
+   
+}
+
+#call-to-action .container {
+    background-color: #3882F6;
+    color: white;
+    border-radius: 3px;
+    padding: 1rem; 
 }
